Fixed card spacing

--- a/css/components.css
+++ b/css/components.css
@@ -59,8 +59,9 @@
 .primary-card {
   background-color: var(--primary-card__bg);
   padding: var(--primary-card__padding);
-  display: grid;
-  
+  display: flex;
+  flex-direction: column;
+  align-items: start;
   gap: var(--primary-card__gap);
   border-radius: var(--primary-card__gap);
 }
@@ -81,6 +82,7 @@
   padding: var(--primary-card__padding);
   display: flex;
   flex-direction: column;
+  align-items: start;
   gap: var(--primary-card__gap);
   border-radius: var(--primary-card__gap);
 }
@@ -107,6 +109,7 @@
   padding: var(--primary-card__padding);
   display: flex;
   flex-direction: column;
+  align-items: start;
   gap: var(--primary-card__gap);
   border-radius: var(--primary-card__radius);
 }
